Changes in 4.1.2

1)  Enhanced Operational Logging

Changes in 4.1.1

1)  Fix ULOG/NFLOG output.

2)  Fix NFQUEUE(<queue-num>) in Policy file.

3)  Allow specifying an address in the Providers file.

Changes in 4.1.0.

1)  Add 'shared' provider option.

2)  Allow refresh of entire table and refresh mangle by default.

3)  Add NFLOG support.

4)  Implement alternative syntax for params.

5)  Add support for embedded shell and Perl scripts.

6)  Add support for manual chains.

7)  Don't require GATEWAY in tunnels file.

8)  Fix HIGH_ROUTE_MARKS fsck-up.

9)  Fix Makefiles for VARDIR

10) Add -t option to hits command.

11) Add DONT_LOAD option

12) Add support for --random.