@@ -1,7 +1,7 @@
 #!/bin/sh
 
 #STYLESHEET=/home/teastep/Shorewall/docbook-xsl-1.62.4//xhtml/docbook.xsl
-STYLESHEET=/usr/share/xml/docbook/stylesheet/nwalsh/xhtml/docbook.xsl
+STYLESHEET=/usr/share/xml/docbook/stylesheet/nwalsh/current/xhtml/docbook.xsl
 WEBSITE=/home/teastep/Shorewall/Website
 HTMFILES="
     6to4.htm
