@@ -12,7 +12,9 @@ Shorewall 4.1 Patch Release 2.
 
 Problems corrected in Shorewall 4.1.2.
 
-None.
+1)  The iptables utility doesn't retry operations that fail due to
+    resource shortage. Beginning with this release, Shorewall reruns
+    iptables when such a failure occurs.
 
 Other changes in Shorewall 4.1.2.
 
