@@ -2,6 +2,10 @@ Changes in 4.1.2
 
 1)  Enhanced Operational Logging
 
+2)  Fix undefined value when config file missing.
+
+3)  Handle exit status 4 from iptables.
+
 Changes in 4.1.1
 
 1)  Fix ULOG/NFLOG output.
